-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4.0 Beta4
-
None
-
-
1902912c2a (qt/qtdeclarative/dev) 1902912c2a (qt/tqtc-qtdeclarative/dev) 967915aa14 (qt/qtdeclarative/6.4) 967915aa14 (qt/tqtc-qtdeclarative/6.4) c6571f2da1 (qt/qtdeclarative/6.4.0) c6571f2da1 (qt/tqtc-qtdeclarative/6.4.0)
I was just re-testing pinch zoom in the multi-page PDF example again after QTBUG-106223 is fixed and while trying to reproduce QTBUG-106357 again; here's yet another way it can fail:
// if there's no exclusive grabber, look for passive grabbers during filtering
if (isFiltering && !pointGrabber) {
auto pg = event->passiveGrabbers(p);
if (!pg.isEmpty()) {
// It seems unlikely to have multiple passive grabbers of one eventpoint with different grandparents.
// So hopefully if we start from one passive grabber and go up the parent chain from there,
// we will find any filtering parent items that exist.
auto handler = qmlobject_cast<QQuickPointerHandler *>(pg.first());
Q_ASSERT(handler); // <--- here
pointGrabber = handler->parentItem();
}
}
1 __pthread_kill (arm64e) /Users/rutledge/Library/Developer/Xcode/iOS DeviceSupport/15.4.1 (19E258) arm64e/Symbols/usr/lib/system/libsystem_kernel.dylib 0x1cc0c9b78 2 pthread_kill (arm64e) /Users/rutledge/Library/Developer/Xcode/iOS DeviceSupport/15.4.1 (19E258) arm64e/Symbols/usr/lib/system/libsystem_pthread.dylib 0x205d383bc 3 abort (arm64e) /Users/rutledge/Library/Developer/Xcode/iOS DeviceSupport/15.4.1 (19E258) arm64e/Symbols/usr/lib/system/libsystem_c.dylib 0x19f6e451c 4 qAbort() qglobal.cpp 2616 0x100d03b84 5 qt_message_fatal(QtMsgType, QMessageLogContext const&, QString const&) qlogging.cpp 1916 0x100d087d8 6 QMessageLogger::fatal(const char *, ...) const qlogging.cpp 850 0x10350305c 7 qt_assert(const char *, const char *, int) qassert.cpp 68 0x103502bb8 8 QQuickItemPrivate::localizedTouchEvent(QTouchEvent const *, bool, QMutableTouchEvent *) qquickitem.cpp 8959 0x101f76e68 9 QQuickDeliveryAgentPrivate::sendFilteredPointerEventImpl(QPointerEvent *, QQuickItem *, QQuickItem *) qquickdeliveryagent.cpp 2380 0x1021c6b5c 10 QQuickDeliveryAgentPrivate::sendFilteredPointerEvent(QPointerEvent *, QQuickItem *, QQuickItem *) qquickdeliveryagent.cpp 2332 0x1021c07f4 11 QQuickDeliveryAgentPrivate::deliverToPassiveGrabbers(QList<QPointer<QObject>> const&, QPointerEvent *) qquickdeliveryagent.cpp 909 0x1021c0500 12 QQuickDeliveryAgentPrivate::deliverUpdatedPoints(QPointerEvent *) qquickdeliveryagent.cpp 1940 0x1021c4a00 13 QQuickDeliveryAgentPrivate::deliverPointerEvent(QPointerEvent *) qquickdeliveryagent.cpp 1791 0x1021bf980 14 QQuickDeliveryAgentPrivate::deliverDelayedTouchEvent() qquickdeliveryagent.cpp 1234 0x1021c1bcc 15 QQuickDeliveryAgentPrivate::handleTouchEvent(QTouchEvent *) qquickdeliveryagent.cpp 1535 0x1021be408 16 QQuickOverlay::eventFilter(QObject *, QEvent *) qquickoverlay.cpp 515 0x101941620 17 QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject *, QEvent *) qcoreapplication.cpp 1158 0x100d908c4 18 QCoreApplicationPrivate::notify_helper(QObject *, QEvent *) qcoreapplication.cpp 1187 0x100d909c8 19 doNotify(QObject *, QEvent *) qcoreapplication.cpp 1122 0x100d90424 20 QCoreApplication::notify(QObject *, QEvent *) qcoreapplication.cpp 1105 0x100d90518 ... <More>