Don't assert that a passive grabber is a pointer handler

Since 375e4003902e56e1cfd4192cee47566161b7b32d a passive grabber can
sometimes be an Item (so far, only Drawer does it).

Fixes: QTBUG-106391
Pick-to: 6.4 6.4.0
Change-Id: I52cd70fda9257acecfc4919ff54179006ff9843b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>